Wrong location Snap Selection to Cursor after set camera Follow the path. #64478

Closed
opened 2019-05-11 11:21:08 +02:00 by BiQ · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce 840M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36

Blender Version
Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-10 22:48, hash: b1af682001
Worked: (optional)

Short description of error
Wrong location Snap Selection to Cursor after set Follow the path.

Exact steps for others to reproduce the error
Snapping work normal before set the camera to follow the path{F7027849}

cursor01.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce 840M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36 **Blender Version** Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-10 22:48, hash: `b1af682001` Worked: (optional) **Short description of error** Wrong location Snap Selection to Cursor after set Follow the path. **Exact steps for others to reproduce the error** Snapping work normal before set the camera to follow the path{[F7027849](https://archive.blender.org/developer/F7027849/Clip_3.jpg)} [cursor01.blend](https://archive.blender.org/developer/F7027848/cursor01.blend)
Author

Added subscriber: @xyzboxzone

Added subscriber: @xyzboxzone
Germano Cavalcante was assigned by Sebastian Parborg 2019-06-11 16:08:40 +02:00
Germano Cavalcante removed their assignment 2019-06-11 20:33:16 +02:00
Sergey Sharybin was assigned by Germano Cavalcante 2019-06-11 20:33:16 +02:00

Added subscribers: @Sergey, @mano-wii

Added subscribers: @Sergey, @mano-wii

The problem is seen when checking the use_path_follow option (Object Data -> Patch Animation -> Follow).

The problem is in the ob_parcurve function, it needs a par->runtime.curve_cache to run.
But the curve_cache is only seen in the evaluated object. Which is not the case.

I thought of some solutions:

  • Calculate a temporary cuve_cache in ob_parcurve or;
  • Pass the evaluated object in BKE_object_get_parent_matrix or;
  • Create a function that passes the cuve_cache as an optional argument.

But since this is a Copy On Write issue, @Sergey, can you take a look?

The problem is seen when checking the `use_path_follow` option (Object Data -> Patch Animation -> Follow). The problem is in the `ob_parcurve` function, it needs a `par->runtime.curve_cache` to run. But the `curve_cache` is only seen in the evaluated object. Which is not the case. I thought of some solutions: - Calculate a temporary `cuve_cache` in `ob_parcurve` or; - Pass the evaluated object in `BKE_object_get_parent_matrix` or; - Create a function that passes the `cuve_cache` as an optional argument. But since this is a Copy On Write issue, @Sergey, can you take a look?

This issue was referenced by f92bb695c4

This issue was referenced by f92bb695c4082351b52a4b8ccb5d021cd6a88263

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@Sergey, using the object->parent evaluated seemed reasonable in this situation. But feel free to try another approach if necessary.

@Sergey, using the `object->parent` evaluated seemed reasonable in this situation. But feel free to try another approach if necessary.

@mano-wii, generally looks fine, but see my comment in the commit.

@mano-wii, generally looks fine, but see my comment in the commit.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64478
No description provided.