Fix T64478: Wrong location Snap Selection to Cursor after set camera Follow the path.

In this case it is necessary to use the `object->parent` evaluated to obtain the correct `parentmat`.